/**
 * Autogenerated by Avro
 *
 * DO NOT EDIT DIRECTLY
 */
package io.seak.avro;
@org.apache.avro.specific.AvroGenerated
public enum OrderBookRequestType implements org.apache.avro.generic.GenericEnumSymbol<OrderBookRequestType> {
  NEW, REPLACE, CANCEL  ;
  public static final org.apache.avro.Schema SCHEMA$ = new org.apache.avro.Schema.Parser().parse("{\"type\":\"enum\",\"name\":\"OrderBookRequestType\",\"namespace\":\"io.seak.avro\",\"symbols\":[\"NEW\",\"REPLACE\",\"CANCEL\"]}");
  public static org.apache.avro.Schema getClassSchema() { return SCHEMA$; }

  @Override
  public org.apache.avro.Schema getSchema() { return SCHEMA$; }
}
